# claude-api

./: .gitignore  AUDIT.md  AUDIT_DIFF.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  pricing.toml  release-plz.toml
.github/workflows/: changelog.yml  ci.yml  release-plz.yml
claude-api-derive/: Cargo.toml
claude-api-derive/src/: lib.rs
claude-api-test/: Cargo.toml
claude-api-test/src/: lib.rs  recorder.rs
claude-api-test/tests/: live_smoke.rs  record_then_replay.rs  replay.rs
claude-api-test/tests/cassettes/: live_admin_rate_limits_org.jsonl  live_admin_users_list.jsonl  live_admin_workspaces_list.jsonl  live_files_upload_retrieve_delete.jsonl  live_messages_count_tokens.jsonl  live_messages_create_minimal.jsonl  live_models_get_sonnet_4_6.jsonl  live_models_list.jsonl  live_skills_list.jsonl  messages_create.jsonl
crates/claude-api/: CHANGELOG.md  Cargo.toml
crates/claude-api-derive/: CHANGELOG.md  Cargo.toml
crates/claude-api-derive/src/: lib.rs
crates/claude-api-test/: CHANGELOG.md  Cargo.toml
crates/claude-api-test/src/: lib.rs  recorder.rs
crates/claude-api-test/tests/: live_smoke.rs  record_then_replay.rs  replay.rs
crates/claude-api-test/tests/cassettes/: live_admin_api_keys_list.jsonl  live_admin_invites_list.jsonl  live_admin_organization_me.jsonl  live_batches_create_cancel_delete.jsonl  live_managed_agents_full_cycle.jsonl  live_memory_stores_lifecycle.jsonl  live_messages_count_tokens.jsonl  live_messages_create_minimal.jsonl  live_messages_create_stream.jsonl  live_models_get_sonnet_4_6.jsonl  live_models_list.jsonl
crates/claude-api/examples/: agent_loop.rs  basic.rs  batches.rs  bedrock.rs  blocking.rs  conversation.rs  derived_tool.rs  document.rs  managed_agents.rs  streaming.rs  streaming_callbacks.rs  tool_use.rs  typed_tools.rs  vision.rs
crates/claude-api/src/: auth.rs  bedrock.rs  client.rs  conversation.rs  cost_preview.rs  dry_run.rs  error.rs  forward_compat.rs  lib.rs  retry.rs  skills.rs  sse.rs  types.rs  vertex.rs
crates/claude-api/src/admin/: cost_report.rs  invites.rs  mod.rs  rate_limits.rs
crates/claude-api/src/batches/: api.rs  mod.rs  types.rs
crates/claude-api/src/blocking/: messages.rs  models.rs
crates/claude-api/src/files/: api.rs  mod.rs
crates/claude-api/src/managed_agents/: events.rs  mod.rs  resources.rs  sessions.rs  threads.rs
crates/claude-api/src/messages/: api.rs  citation.rs  content.rs  input.rs  mcp.rs  mod.rs  request.rs  response.rs  stream.rs  thinking.rs  tools.rs
crates/claude-api/src/models/: mod.rs
crates/claude-api/src/tool_dispatch/: mod.rs  registry.rs  runner.rs  tool.rs  typed.rs
crates/claude-api/tests/: bedrock_live.rs  blocking.rs  derive.rs  messages.rs  models.rs  streaming.rs
crates/claude-api/tests/common/: mod.rs
examples/: agent_loop.rs  basic.rs  conversation.rs  derived_tool.rs  document.rs  streaming.rs  streaming_callbacks.rs  tool_use.rs  typed_tools.rs  vision.rs
src/: auth.rs  bedrock.rs  beta.rs  client.rs  conversation.rs  cost_preview.rs  error.rs  lib.rs  pagination.rs  pricing.rs  retry.rs  skills.rs  types.rs  user_profiles.rs
src/admin/: api_keys.rs  organization.rs  rate_limits.rs  usage_report.rs  users.rs  workspace_members.rs  workspaces.rs
src/batches/: api.rs  mod.rs  types.rs
src/blocking/: client.rs  mod.rs
src/files/: api.rs  types.rs
src/managed_agents/: agents.rs  environments.rs  events.rs  memory_stores.rs  mod.rs  resources.rs  sessions.rs  threads.rs  vaults.rs
src/messages/: api.rs  cache.rs  content.rs  mcp.rs  metadata.rs  mod.rs  request.rs  response.rs  stream.rs  tools.rs
src/models/: mod.rs
src/tool_dispatch/: mod.rs  registry.rs  runner.rs  tool.rs  typed.rs
tests/: bedrock_live.rs  blocking.rs
tests/fixtures/: message_response.json  models_page.json
tests/sse_corpus/: hello_world.sse  tool_use_partial_json.sse
tools/audit/: spec_diff.sh
