[workspace]
members = [
    "crates/claude-api",
    "crates/claude-api-derive",
    "crates/claude-api-test",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/claude-api"

[workspace.dependencies]
# Cross-cutting deps used by 2+ crates. Single-crate deps stay in the
# crate's own [dependencies] block.

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
http = "1.1"
reqwest = { version = "0.12", default-features = false }
bytes = "1"

# Async
tokio = { version = "1" }
futures-util = "0.3"

# Test
wiremock = "0.6"
pretty_assertions = "1.4"
