[package]
name = "claude-api-derive"
version = "0.4.0"
edition = "2021"
rust-version = "1.82"
description = "Procedural macros for claude-api (Tool derive)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/claude-api"
documentation = "https://docs.rs/claude-api-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
