[package]
name = "claude-api-test"
version = "0.4.5"
edition = "2021"
rust-version = "1.82"
description = "Test utilities for claude-api: cassette-based replay of recorded HTTP exchanges"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/claude-api"
documentation = "https://docs.rs/claude-api-test"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wiremock = "0.6"
tokio = { version = "1", features = ["fs", "rt", "net", "macros", "sync", "io-util"] }
http = "1.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
bytes = "1"

[dev-dependencies]
claude-api = { version = "0.4.5", path = "..", default-features = false, features = ["async", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
